--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,66 @@
-live-config (5.20170113) unstable; urgency=medium
+live-config (5.20180224) unstable; urgency=medium
 
-  [ jongkyung.woo ]
-  * [9e16c164] Merge Gooroom patches on debian/20170112
-  * [93356287] Modified LIVE_HOSTNAME and LIVE_USER_FULLNAME to Gooroom
-  * [cb22f3f4] Changed LIVE_USERNAME to gooroom in live-config-update
-  * [fe91ca0c] Copy the installer icon from "Desktop' to "바탕화면"
+  [ Steve McIntyre ]
+  * Repo moved to salsa
 
-  [ Gooroom Autobuilder ]
+  [ Ronny Standtke ]
+  * Fix a race condition between live-config and systemd-tmpfiles-setup
+    (Closes: #886009)
 
- -- Gooroom Autobuilder <jenkins@gooroom.kr>  Wed, 14 Mar 2018 12:13:41 +0900
+  [ Raphaël Hertzog ]
+  * Minor packaging updates
+    * Switch to debhelper compat level 11.
+    * Bump Standards-Version to 4.1.3.
+  * Adjust rules and build-depends for debhelper 11
+  * Add lintian overrides for expected weirdness of init script and systemd unit
+  * Fix spelling errors in the live-config manual page
+
+ -- Raphaël Hertzog <hertzog@debian.org>  Sat, 24 Feb 2018 11:54:36 +0100
+
+live-config (5.20170914) unstable; urgency=medium
+
+  [ Алексей Шилин ]
+  * Add components/0085-sddm to configure autologin for KDE / Plasma live
+    images. Closes: #865382.
+
+  [ Raphaël Hertzog ]
+  * Setting of keyboard configuration broke now that udev starts before
+    live-config so we force a reload of the configuration for the input
+    sub-system with udevadm. cf. https://bugs.kali.org/view.php?id=4239
+
+ -- Raphaël Hertzog <hertzog@debian.org>  Thu, 14 Sep 2017 14:50:48 +0200
+
+live-config (5.20170829) unstable; urgency=medium
+
+  * Export LANG environment variable to systemd.
+  * Merge locales-all component into the locales one. It was not doing
+    anything useful on its own and it was buggy (was always setting LANG="" in
+    /etc/profile.d/zz-live-config_locales-all.sh). This bug was breaking
+    the locale in GNOME Wayland sessions whereas Xorg sessions were rescued
+    by the fact that /etc/gdm3/Xsession overrides LANG with the content of
+    GDM_LANG.
+  * Bump Standards-Version to 4.1.0.
+  * Bump debhelper compat level to 10.
+
+ -- Raphaël Hertzog <hertzog@debian.org>  Tue, 29 Aug 2017 12:01:10 +0200
+
+live-config (5.20170623) unstable; urgency=medium
+
+  * Drop "Before=udev.service" in live-config-systemd.service as it
+    breaks the boot process when you have multiple partitions mounted
+    as part of local-fs.target. Closes: #827665, #855085
+  * Move Setup_network definition to a shared file and include it
+    where it is needed. Closes: #858013
+
+ -- Raphaël Hertzog <hertzog@debian.org>  Fri, 23 Jun 2017 14:15:17 +0200
+
+live-config (5.20170316) unstable; urgency=medium
+
+  * Call "setupcon -k" ourselves to make the new keyboard configuration
+    active. Closes: #854004
+  * Add myself in Uploaders.
+
+ -- Raphaël Hertzog <hertzog@debian.org>  Thu, 16 Mar 2017 15:44:22 +0100
 
 live-config (5.20170112) unstable; urgency=medium
 
