--- a/manpages/fr/live-config.fr.7
+++ b/manpages/fr/live-config.fr.7
@@ -60,9 +60,9 @@ Certains des composants peuvent changer leur comportement en fonction d'un
 paramètre d'amorçage.
 
 .IP "\fBlive\-config.debconf\-preseed\fP=filesystem|medium|\fIURL1\fP|\fIURL2\fP| ... |\fIURLn\fP | \fBdebconf\-preseed\fP=medium|filesystem|\fIURL1\fP|\fIURL2\fP| ... |\fIURLn\fP" 4
-Permet de récupérer et d'appliquer un ou plusieurs fichiers de
-pré\-configuration debconf à la base de données debconf. Notez que les URLs
-doivent pouvoir être utilisables par wget (http, ftp ou file://).
+Allows one to fetch and apply one or more debconf preseed files to be
+applied to the debconf database. Note that the URLs must be fetchable by
+wget (http, ftp or file://).
 .br
 Si le fichier est placé dans le dispositif live, il peut être utilisé avec
 file:///lib/live/mount/medium/\fIFILE\fP, ou bien avec file:///\fIFILE\fP s'il est
@@ -81,78 +81,67 @@ pré\-configuration du système de fichiers sont appliqués en premier, puis les
 fichiers de pré\-configuration du dispositif, et enfin les fichiers de
 pré\-configuration du réseau.
 .IP "\fBlive\-config.hostname\fP=\fINOM_D_HÔTE\fP | \fBhostname\fP=\fINOM_D_HÔTE\fP" 4
-Permet de spécifier un nom d'hôte (hostname) du système. Par défaut ce nom
-est 'debian'.
+Allows one to set the hostname of the system. The default is 'debian'.
 .IP "\fBlive\-config.username\fP=\fINOM_D_UTILISATEUR\fP | \fBusername\fP=\fINOM_D_UTILISATEUR\fP" 4
-Permet de spécifier le nom d'utilisateur qui est créé pour l'auto\-login. Par
-défaut ce nom est 'user'.
+Allows one to set the username that gets created for autologin. The default
+is 'user'.
 .IP "\fBlive\-config.user\-default\-groups\fP=\fIGROUP1\fP,\fIGROUP2\fP ... \fIGROUPn\fP | \fBuser\-default\-groups\fP=\fIGROUP1\fP,\fIGROUP2\fP ... \fIGROUPn\fP" 4
-Permet de spécifier les groupes par défaut dont sont membre les utilisateurs
-qui sont créés pour l'auto\-login. Par défaut, c'est 'audio cdrom dip floppy
-video plugdev netdev powerdev scanner bluetooth'.
+Allows one to set the default groups of the users that gets created for
+autologin is member of. The default is 'audio cdrom dip floppy video plugdev
+netdev powerdev scanner bluetooth'.
 .IP "\fBlive\-config.user\-fullname\fP=\(dq\fINOM_COMPLET_D_UTILISATEUR\fP\(dq | \fBuser\-fullname\fP=\(dq\fINOM_COMPLET_D_UTILISATEUR\fP\(dq" 4
-Permet de spécifier le nom complet des utilisateurs créés pour
-l'auto\-login. Pour Debian, il s'agit par défaut de 'Debian Live user'.
+Allows one to set the fullname of the users that gets created for
+autologin. On Debian the default is 'Debian Live user'.
 .IP "\fBlive\-config.locales\fP=\fILOCALISATION1\fP,\fILOCALISATION2\fP ... \fILOCALISATIONn\fP | \fBlocales\fP=\fILOCALISATION1\fP,\fILOCALISATION2\fP ... \fILOCALISATIONn\fP" 4
-Permet de spécifier la localisation du système, par exemple
-\&'fr_FR.UTF\-8'. Par défaut, il s'agit de 'en_US.UTF\-8'. Dans le cas où la
-locale spécifiée n'est pas déjà disponible sur le système, elle est
-automatiquement générée à la volée.
+Allows one to set the locale of the system, e.g. 'de_CH.UTF\-8'. The default
+is 'en_US.UTF\-8'. In case the selected locale is not already available on
+the system, it is automatically generated on the fly.
 .IP "\fBlive\-config.timezone\fP=\fITIMEZONE\fP | \fBtimezone\fP=\fITIMEZONE\fP" 4
-Permet de spécifier la timezone du système, par exemple 'Europe/Paris'. Par
-défaut, il s'agit de 'UTC'.
+Allows one to set the timezone of the system, e.g. 'Europe/Zurich'. The
+default is 'UTC'.
 .IP "\fBlive\-config.keyboard\-model\fP=\fIMODELE_DE_CLAVIER\fP | \fBkeyboard\-model\fP=\fIMODELE_DE_CLAVIER\fP" 4
-Permet de changer le modèle de clavier. Il n'y a pas de valeur par défaut
-spécifiée.
+Allows one to change the keyboard model. There is no default value set.
 .IP "\fBlive\-config.keyboard\-layouts\fP=\fIKEYBOARD_LAYOUT1\fP,\fIKEYBOARD_LAYOUT2\fP ... \fIKEYBOARD_LAYOUTn\fP | \fBkeyboard\-layouts\fP=\fIKEYBOARD_LAYOUT1\fP,\fIKEYBOARD_LAYOUT2\fP ... \fIKEYBOARD_LAYOUTn\fP" 4
-Permet de changer la configuration du clavier. Si plus d'une configuration
-est spécifiée, les utilitaires de l'environnement de bureau permettront de
-passer de l'une à l'autre sous X11. Il n'y a pas de valeur par défaut
-spécifiée.
+Allows one to change the keyboard layouts. If more than one is specified,
+the tools of the desktop environment will allow one to switch it under
+X11. There is no default value set.
 .IP "\fBlive\-config.keyboard\-variants\fP=\fIKEYBOARD_VARIANT1\fP,\fIKEYBOARD_VARIANT2\fP ... \fIKEYBOARD_VARIANTn\fP | \fBkeyboard\-variants\fP=\fIKEYBOARD_VARIANT1\fP,\fIKEYBOARD_VARIANT2\fP ... \fIKEYBOARD_VARIANTn\fP" 4
-Permet de changer la variante du clavier. Si plus d'une variante est
-spécifiée, le même nombre de valeurs que keyboard\-layouts devraient être
-spécifiées car elles se correspondront une à une dans l'ordre spécifié. On
-peut utiliser valeurs vides. Les outils de l'environnement de bureau
-permettront de passer de l'une à l'autre sous X11. Il n'y a pas de valeur
-par défaut spécifiée.
+Allows one to change the keyboard variants. If more than one is specified,
+the same number of values as keyboard\-layouts values should be specified as
+they will be matched one\-to\-one in the order specified. Blank values are
+allowed. The tools of the desktop environment will allow one to switch
+between each layout and variant pair under X11. There is no default value
+set.
 .IP "\fBlive\-config.keyboard\-options\fP=\fIOPTIONS_DU_CLAVIER\fP | \fBkeyboard\-options\fP=\fIOPTIONS_DU_CLAVIER\fP" 4
-Permet de changer les options du clavier. Il n'y a pas de valeur par défaut
-spécifiée.
+Allows one to change the keyboard options. There is no default value set.
 .IP "\fBlive\-config.sysv\-rc\fP=\fISERVICE1\fP,\fISERVICE2\fP ... \fISERVICEn\fP | \fBsysv\-rc\fP=\fISERVICE1\fP,\fISERVICE2\fP ... \fISERVICEn\fP" 4
-Permet de désactiver des services sysv via update\-rc.d.
+Allows one to disable sysv services through update\-rc.d.
 .IP "\fBlive\-config.utc\fP=\fByes\fP|no | \fButc\fP=\fByes\fP|no" 4
-Permet de modifier si le système assume que l'horloge matérielle est réglée
-sur UTC. Par défaut : 'oui'.
+Allows one to change if the system is assuming that the hardware clock is
+set to UTC or not. The default is 'yes'.
 .IP "\fBlive\-config.x\-session\-manager=\fP\fIGESTIONNAIRE_DE_SESSION_X\fP | \fBx\-session\-manager\fP=\fIGESTIONNAIRE_DE_SESSION_X\fP" 4
-Permet de spécifier le x\-session\-manager via update\-alternatives.
+Allows one to set the x\-session\-manager through update\-alternatives.
 .IP "\fBlive\-config.xorg\-driver\fP=\fIPILOTE_XORG\fP | \fBxorg\-driver\fP=\fIPILOTE_XORG\fP" 4
-Permet de spécifier le pilote utilisé par xorg plutôt que d'utiliser
-l'auto\-détection. Si un ID PCI est spécifié dans
-/usr/share/live/config/xserver\-xorg/\fIDRIVER\fP.ids dans le système live, le
-\fIDRIVER\fP est appliqué pour ces périphériques. Si un paramètre d'amorçage et
-un override sont trouvés à la fois, le paramètre de démarrage est
-prioritaire.
+Allows one to set xorg driver instead of autodetecting it. If a PCI ID is
+specified in /usr/share/live/config/xserver\-xorg/\fIDRIVER\fP.ids within the
+live system, the \fIDRIVER\fP is enforced for these devices. If both a boot
+parameter and an override are found, the boot parameter takes precedence.
 .IP "\fBlive\-config.xorg\-resolution\fP=\fIRESOLUTION_XORG\fP | \fBxorg\-resolution\fP=\fIRESOLUTION_XORG\fP" 4
-Permet de spécifier la résolution utilisée par xorg, plutôt que d'utiliser
-l'auto\-détection, par example 1024x768.
+Allows one to set xorg resolution instead of autodetecting it,
+e.g. 1024x768.
 .IP "\fBlive\-config.wlan\-driver\fP=\fIPILOTE_WLAN\fP | \fBwlan\-driver\fP=\fIPILOTE_WLAN\fP" 4
-Permet de spécifier le pilote utilisé par WLAN plutôt que d'utiliser
-l'auto\-détection. Si un ID PCI est spécifié dans
-/usr/share/live/config/broadcom\-sta/\fIDRIVER\fP.ids dans le système live, le
-\fIDRIVER\fP est appliqué pour ces périphériques. Si un paramètre d'amorçage et
-un override sont trouvés à la fois, le paramètre de démarrage est
-prioritaire.
+Allows one to set WLAN driver instead of autodetecting it. If a PCI ID is
+specified in /usr/share/live/config/broadcom\-sta/\fIDRIVER\fP.ids within the
+live system, the \fIDRIVER\fP is enforced for these devices. If both a boot
+parameter and an override are found, the boot parameter takes precedence.
 .IP "\fBlive\-config.hooks\fP=filesystem|medium|\fIURL1\fP|\fIURL2\fP| ... |\fIURLn\fP | \fBhooks\fP=\fIURL1\fP|\fIURL2\fP| ... |\fIURLn\fP" 4
-Permet d'aller chercher et d'exécuter un ou plusieurs fichiers
-spécifiques. Notez que les URLs doivent pouvoir être téléchargées par wget
-(http, ftp or file://), que les fichiers sont exécutés dans /tmp du système
-live en fonctionnement, et que les dépendances des fichiers doivent être
-préalablement installées; par exemple, si vous devez exécuter un script
-python, vous devez préalablement installer l'interpréteur python sur le
-système. Quelques hooks pour certains cas d'utilisation communs sont
-disponibles dans /usr/share/doc/live\-config/examples/hooks/ et sur
-<\fIhttp://live.debian.net/other/hooks\fP>.
+Allows one to fetch and execute one or more arbitrary files. Note that the
+URLs must be fetchable by wget (http, ftp or file://), the files are
+executed in /tmp of the running live system, and that the files needs their
+dependencies, if any, already installed, e.g. if a python script should be
+executed the system needs python installed. Some hooks for some common
+use\-cases are available at /usr/share/doc/live\-config/examples/hooks/ and
+<\fIhttp://live\-systems.org/other/hooks\fP>.
 .br
 Si le fichier est placé dans le dispositif live, il peut être utilisé avec
 file:///lib/live/mount/medium/\fIFILE\fP, ou bien avec file:///\fIFILE\fP s'il est
@@ -188,8 +177,7 @@ Désactive l'auto\-login avec tout gestionnaire graphique, sans affecter
 l'auto\-login en console (tty).
 
 .SS "Paramètres d'amorçage (options particulières)"
-Pour certains cas d'utilisation, il existe des paramètres de démarrage
-spécifiques.
+For special use cases there are some special boot parameters.
 
 .IP "\fBlive\-config.debug\fP | \fBdebug\fP" 4
 Active les messages de debug dans live\-config.
@@ -215,12 +203,11 @@ soit sur le média live (live/config.conf, live/config.conf.d/*.conf). Si ces
 deux emplacements sont utilisés pour une même option, ceux placés dans le
 média live sont prioritaires sur ceux dans la racine du système.
 .PP
-Bien que les fichiers de configuration placés dans les répertoires de
-configuration ne nécessitent pas un nom ou suffixe particulier, il est
-suggéré, pour des raisons de cohérence, d'utiliser «vendeur.conf» ou
-«projet.conf» en tant que modèle de nommage («vendeur» ou «projet» étant
-remplacé par le nom réel, résultant en un nom de fichier comme
-«progress\-linux.conf»).
+Although the configuration files placed in the configuration directories do
+not require a particular name, it is suggested for consistency reasons to
+either use 'vendor.conf' or 'project.conf' as a naming scheme (whereas
+\&'vendor' or 'project' is replaced with the actual name, resulting in a
+filename like 'progress\-linux.conf').
 .PP
 Le contenu réel des fichiers de configuration se compose d'une ou plusieurs
 des variables suivantes.
@@ -259,7 +246,7 @@ Cette variable correspond au paramètre
 .IP \fBLIVE_KEYBOARD_MODEL\fP=\fIMODELE_DE_CLAVIER\fP 4
 Cette variable correspond au paramètre
 \&'\fBlive\-config.keyboard\-model\fP=\fIMODELE_DE_CLAVIER\fP'.
-.IP "\fBLIVE_KEYBOARD_LAYOUTS\fP=\fICONFIGURATION1_DU_CLAVIER\fP,\fICONFIGURATION2_DU_CLAVIER\fP ... \fICONFIGURATIONn_DU_CLAVIER\fP" 4
+.IP "\fBLIVE_KEYBOARD_LAYOUTS\fP=\fICONFIG_CLAVIER1\fP,\fICONFIG_CLAVIER2\fP ... \fICONFIG_CLAVIERn\fP" 4
 Cette variable correspond au paramètre
 \&'\fBlive\-config.keyboard\-layouts\fP=\fICONFIGURATION1_DU_CLAVIER\fP,\fICONFIGURATION2_DU_CLAVIER\fP
 \&... \fICONFIGURATIONn_DU_CLAVIER\fP'.
@@ -307,13 +294,12 @@ Debian. Un paquet contenant un composant d'exemple est proposé dans
 /usr/share/doc/live\-config/examples.
 
 .SS "Enlever des composants de configuration existants"
-Il n'est actuellement pas vraiment possible d'enlever proprement les
-composants sans avoir besoin soit d'utiliser un paquet \fBlive\-config\fP
-modifié localement, soit à l'aide de dpkg\-divert. Cependant, la même chose
-peut être réalisée en désactivant les scripts respectifs via le mécanisme
-live\-config.nocomponents, comme indiqué ci\-dessus. Afin d'éviter de toujours
-avoir à spécifier les composants désactivés via le paramètre d'amorçage, un
-fichier de configuration devrait être utilisé, voir ci\-dessus.
+It is not really possible to remove components itself in a sane way yet
+without requiring either to ship a locally modified \fBlive\-config\fP package
+or using dpkg\-divert. However, the same can be achieved by disabling the
+respective components through the live\-config.nocomponents mechanism, see
+above. To avoid to always need specifying disabled components through the
+boot parameter, a configuration file should be used, see above.
 .PP
 Les fichiers de configuration pour le système live lui\-même devront de
 préférence être inclus dans leur propre paquet debian. Un paquet de
@@ -325,8 +311,8 @@ démonstration contenant un exemple de configuration est proposé dans
 /lib/live/config.
 
 .IP \fBdebconf\fP 4
-permet d'appliquer des fichiers de pré\-configuration arbitraires placés sur
-les média live ou un serveur http/ftp.
+allows one to apply arbitrary preseed files placed on the live media or an
+http/ftp server.
 .IP \fBhostname\fP 4
 configure /etc/hostname et /etc/hosts.
 .IP \fBuser\-setup\fP 4
@@ -396,8 +382,8 @@ configure xfce4\-panel avec les réglages par défaut.
 .IP \fBxscreensaver\fP 4
 désactive le verrouillage de session par l'économiseur d'écran.
 .IP \fBhooks\fP 4
-permet de lancer des commandes arbitraires depuis un composant placé sur le
-média live, ou sur un serveur http/ftp.
+allows one to run arbitrary commands from a file placed on the live media or
+an http/ftp server.
 
 .SH FICHIERS
 .IP \fB/etc/live/config.conf\fP 4
