--- a/manpages/it/live-config.it.7
+++ b/manpages/it/live-config.it.7
@@ -59,9 +59,9 @@ Alcuni singoli componenti possono modificare il loro comportamento in base a
 un parametro di avvio.
 
 .IP "\fBlive\-config.debconf\-preseed\fP=filesystem|medium|\fIURL1\fP|\fIURL2\fP| ... |\fIURLn\fP | \fBdebconf\-preseed\fP=medium|filesystem|\fIURL1\fP|\fIURL2\fP| ... |\fIURLn\fP" 4
-Permette di prelevare e applicare uno o più file debconf di
-preconfigurazione da applicare al database debconf. Si noti che gli URL
-devono essere scaricabili da wget (http, ftp o file://).
+Allows one to fetch and apply one or more debconf preseed files to be
+applied to the debconf database. Note that the URLs must be fetchable by
+wget (http, ftp or file://).
 .br
 Se il file è posizionato sul supporto live, questo  può essere prelevato con
 file:///lib/live/mount/medium/\fIFILE\fP, o con file:///\fIFILE\fP se è nella
@@ -78,71 +78,66 @@ Se vengono congiunti diversi meccanismi i file di preconfigurazione di tipo
 filesystem vengono applicati per primi, seguiti dalla tipologia medium e
 quindi da quelli network.
 .IP "\fBlive\-config.hostname\fP=\fIHOSTNAME\fP | \fBhostname\fP=\fIHOSTNAME\fP" 4
-Permette di impostare l'hostname del sistema, il predefinito è "debian".
+Allows one to set the hostname of the system. The default is 'debian'.
 .IP "\fBlive\-config.username\fP=\fINOMEUTENTE\fP | \fBusername\fP=\fINOMEUTENTE\fP" 4
-Permette di impostare il nome utente che viene creato per il login
-automatico, il predefinito è "user".
+Allows one to set the username that gets created for autologin. The default
+is 'user'.
 .IP "\fBlive\-config.user\-default\-groups\fP=\fIGRUPPO\fP,\fIGRUPPO2\fP ... \fIGRUPPOn\fP | \fBuser\-default\-groups\fP=\fIGRUPPO1\fP,\fIGRUPPO2\fP ... \fIGRUPPOn\fP" 4
-Permette di impostare i gruppi dei quali fanno parte gli utenti creati per
-il login automatico. Il valore predefinito è "audio cdrom dip floppy video
-plugdev netdev powerdev scanner bluetooth".
+Allows one to set the default groups of the users that gets created for
+autologin is member of. The default is 'audio cdrom dip floppy video plugdev
+netdev powerdev scanner bluetooth'.
 .IP "\fBlive\-config.user\-fullname\fP=\(dq\fINOME COMPLETO UTENTE\fP\(dq | \fBuser\-fullname\fP=\(dq\fINOME COMPLETO UTENTE\fP\(dq" 4
-Permette di impostare il nome utente completo che viene creato per il login
-automatico, il predefinito di Debian è "Debian Live user".
+Allows one to set the fullname of the users that gets created for
+autologin. On Debian the default is 'Debian Live user'.
 .IP "\fBlive\-config.locales\fP=\fILOCALIZZAZIONE1\fP,\fILOCALIZZAZIONE2\fP ... \fILOCALIZZAZIONEn\fP | \fBlocales\fP=\fILOCALIZZAZIONE1\fP,\fILOCALIZZAZIONE2\fP ... \fILOCALIZZAZIONEn\fP" 4
-Permette di impostare la localizzazione del sistema, ad esempio
-"it_IT.UTF\-8", il predefinito è "en_US.UTF\-8". Se la localizzazione
-selezionata non è già disponibile viene generata al volo automaticamente.
+Allows one to set the locale of the system, e.g. 'de_CH.UTF\-8'. The default
+is 'en_US.UTF\-8'. In case the selected locale is not already available on
+the system, it is automatically generated on the fly.
 .IP "\fBlive\-config.timezone\fP=\fIFUSO ORARIO\fP | \fBtimezone\fP=\fIFUSO ORARIO\fP" 4
-Permette di impostare il fuso orario del sistema, ad esempio "Europe/Rome";
-il predefinito è "UTC".
+Allows one to set the timezone of the system, e.g. 'Europe/Zurich'. The
+default is 'UTC'.
 .IP "\fBlive\-config.keyboard\-model\fP=\fIMODELLO_TASTIERA\fP | \fBkeyboard\-model\fP=\fIMODELLO_TASTIERA\fP" 4
-Permette di scegliere il modello della tastiera, non è impostato alcun
-valore predefinito.
+Allows one to change the keyboard model. There is no default value set.
 .IP "\fBlive\-config.keyboard\-layouts\fP=\fILAYOUT_TASTIERA1\fP,\fILAYOUT_TASTIERA2\fP ... \fILAYOUT_TASTIERAn\fP | \fBkeyboard\-layouts\fP=\fILAYOUT_TASTIERA1\fP,\fILAYOUT_TASTIERA2\fP ... \fILAYOUT_TASTIERAn\fP" 4
-Permette di modificare i layout della tastiera. Se ne viene specificato più
-di uno gli strumenti dell'ambiente desktop consentiranno di cambiarlo in
-X11. Non è impostato alcun valore predefinito.
+Allows one to change the keyboard layouts. If more than one is specified,
+the tools of the desktop environment will allow one to switch it under
+X11. There is no default value set.
 .IP "\fBlive\-config.keyboard\-variants\fP=\fISCHEMA_TASTIERA1\fP,\fISCHEMA_TASTIERA2\fP ... \fISCHEMA_TASTIERAn\fP | \fBkeyboard\-variants\fP=\fISCHEMA_TASTIERA1\fP,\fISCHEMA_TASTIERA2\fP ... \fISCHEMA_TASTIERAn\fP" 4
-Permette di modificare gli schemi della tastiera (es. qwerty, qWERTZ,
-AZERTY, ecc.). Se ne viene specificato più di uno è necessario indicare lo
-stesso numero di valori dei layout della tastiera che verranno abbinati ad
-uno schema nell'ordine definito. Sono ammessi valori vuoti. Gli strumenti
-dell'ambiente desktop consentiranno di passare da uno all'altro in X11. Non
-è impostato alcun valore predefinito.
+Allows one to change the keyboard variants. If more than one is specified,
+the same number of values as keyboard\-layouts values should be specified as
+they will be matched one\-to\-one in the order specified. Blank values are
+allowed. The tools of the desktop environment will allow one to switch
+between each layout and variant pair under X11. There is no default value
+set.
 .IP "\fBlive\-config.keyboard\-options\fP=\fIOPZIONI_TASTIERA\fP | \fBkeyboard\-options\fP=\fIOPZIONI_TASTIERA\fP" 4
-Permette di modificare le opzioni della tastiera, non è impostato alcun
-valore predefinito.
+Allows one to change the keyboard options. There is no default value set.
 .IP "\fBlive\-config.sysv\-rc\fP=\fISERVIZIO1\fP,\fISERVIZIO2\fP ... \fISERVIZIOn\fP | \fBsysv\-rc\fP=\fISERVIZIO1\fP,\fISERVIZIO2\fP ... \fISERVIZIOn\fP" 4
-Permette di disabilitare i servizi di sysv tramite update\-rc.d.
+Allows one to disable sysv services through update\-rc.d.
 .IP "\fBlive\-config.utc\fP=\fByes\fP|no | \fButc\fP=\fByes\fP|no" 4
-Permette di scegliere se il sistema debba supporre che l'orologio hardware
-sia impostato o meno su UTC, il valore predefinito è "yes".
+Allows one to change if the system is assuming that the hardware clock is
+set to UTC or not. The default is 'yes'.
 .IP "\fBlive\-config.x\-session\-manager=\fP\fIX_SESSION_MANAGER\fP | \fBx\-session\-manager\fP=\fIX_SESSION_MANAGER\fP" 4
-Permette di impostare x\-session\-manager tramite update\-alternatives.
+Allows one to set the x\-session\-manager through update\-alternatives.
 .IP "\fBlive\-config.xorg\-driver\fP=\fIDRIVER_XORG\fP | \fBxorg\-driver\fP=\fIDRIVER_XORG\fP" 4
-Permette di impostare il driver per xorg invece di riconoscerlo
-automaticamente. Se un ID PCI viene specificato in
-/usr/share/live/config/xserver\-xorg/\fIDRIVER\fP.ids all'interno del sistema
-live, \fIDRIVER\fP viene applicato a questi device. Se viene trovato sia un
-parametro di boot sia uno imposto, quello di boot ha la precedenza.
+Allows one to set xorg driver instead of autodetecting it. If a PCI ID is
+specified in /usr/share/live/config/xserver\-xorg/\fIDRIVER\fP.ids within the
+live system, the \fIDRIVER\fP is enforced for these devices. If both a boot
+parameter and an override are found, the boot parameter takes precedence.
 .IP "\fBlive\-config.xorg\-resolution\fP=\fIRISOLUZIONE_XORG\fP | \fBxorg\-resolution\fP=\fIRISOLUZIONE_XORG\fP" 4
-Permette di impostare la risoluzione per xorg invece di riconoscerla
-automaticamente, ad esempio 1024x768.
+Allows one to set xorg resolution instead of autodetecting it,
+e.g. 1024x768.
 .IP "\fBlive\-config.wlan\-driver\fP=\fIDRIVER_WLAN\fP | \fBwlan\-driver\fP=\fIDRIVER_WLAN\fP" 4
-Permette di impostare il driver per WLAN invece di riconoscerlo
-automaticamente. Se un ID PCI viene specificato in
-/usr/share/live/config/broadcom\-sta/\fIDRIVER\fP.ids all'interno del sistema
-live, \fIDRIVER\fP viene applicato a questi device. Se viene trovato sia un
-parametro di boot sia uno imposto, quello di boot ha la precedenza.
+Allows one to set WLAN driver instead of autodetecting it. If a PCI ID is
+specified in /usr/share/live/config/broadcom\-sta/\fIDRIVER\fP.ids within the
+live system, the \fIDRIVER\fP is enforced for these devices. If both a boot
+parameter and an override are found, the boot parameter takes precedence.
 .IP "\fBlive\-config.hooks\fP=filesystem|medium|\fIURL1\fP|\fIURL2\fP| ... |\fIURLn\fP | \fBhooks\fP=medium|filesystem|\fIURL1\fP|\fIURL2\fP| ... |\fIURLn\fP" 4
-Permette di prelevare ed eseguire uno o più file arbitrari. Si noti che gli
-URL devono essere scaricabili da wget (http, ftp o file://), i file vengono
-eseguiti nella directory /tmp del sistema in esecuzione, e che tali file
-necessitano delle loro dipendenze già installate; ad esempio se bisogna
-eseguire uno script python il sistema ha bisogno di python installato. Sono
-disponibili alcuni hook per i casi d'uso più comuni in
-/usr/share/doc/live\-config/examples/hooks/ e all'indirizzo
+Allows one to fetch and execute one or more arbitrary files. Note that the
+URLs must be fetchable by wget (http, ftp or file://), the files are
+executed in /tmp of the running live system, and that the files needs their
+dependencies, if any, already installed, e.g. if a python script should be
+executed the system needs python installed. Some hooks for some common
+use\-cases are available at /usr/share/doc/live\-config/examples/hooks/ and
 <\fIhttp://live\-systems.org/other/hooks\fP>.
 .br
 Se il file è posizionato sul supporto live, questo  può essere prelevato con
@@ -177,7 +172,7 @@ Disabilita il login automatico con qualsiasi gestore grafico senza
 coinvolgere quello in tty.
 
 .SS "Parametri di avvio (opzioni speciali)"
-Per casi particolari ci sono alcuni parametri speciali.
+For special use cases there are some special boot parameters.
 
 .IP "\fBlive\-config.debug\fP | \fBdebug\fP" 4
 Abilita l'output di debug in live\-config.
@@ -201,11 +196,11 @@ supporto live (live/config.conf, live/config.conf.d/*.conf). Se per una
 certa opzione si usano entrambe le destinazioni, avrà la precedenza quello
 del supporto live.
 .PP
-Sebbene i file di configurazione messi nelle directory di configurazione non
-richiedano un nome o un suffisso particolari, per coerenza è suggerito di
-usare "vendor.conf"o "project.conf" come schema di denominazione (laddove
-"vendor" o "project" è sostituito con un nome reale, risultando in un nome
-di file come "progress\-linux.conf").
+Although the configuration files placed in the configuration directories do
+not require a particular name, it is suggested for consistency reasons to
+either use 'vendor.conf' or 'project.conf' as a naming scheme (whereas
+\&'vendor' or 'project' is replaced with the actual name, resulting in a
+filename like 'progress\-linux.conf').
 .PP
 Il contenuto effettivo dei file di configurazione è costituito da una o più
 delle seguenti variabili.
@@ -292,13 +287,12 @@ richiamati automaticamente durante il boot.
 può trovare un esempio in /usr/share/doc/live\-config/examples.
 
 .SS "Rimuovere componenti config esistenti"
-Non è ancora realmente possibile rimuovere i componenti in un modo sensato
-che non richieda di fornire un pacchetto di \fBlive\-config\fP modificato
-localmente o l'uso di dpkg\-divert. Tuttavia la stessa cosa si può ottenere
-disabilitando i rispettivi componenti tramite il meccanismo di
-live\-config.nocomponents come spiegato prima. Per evitare di dover
-specificare ogni volta con parametri di boot i componenti da disabilitare,
-usare un file di configurazione come mostrato in precedenza.
+It is not really possible to remove components itself in a sane way yet
+without requiring either to ship a locally modified \fBlive\-config\fP package
+or using dpkg\-divert. However, the same can be achieved by disabling the
+respective components through the live\-config.nocomponents mechanism, see
+above. To avoid to always need specifying disabled components through the
+boot parameter, a configuration file should be used, see above.
 .PP
 È consigliato mettere i file di configurazione per il sistema live in un
 pacchetto debian dedicato. Si può trovare un esempio in
@@ -308,8 +302,8 @@ pacchetto debian dedicato. Si può trovare un esempio in
 \fBlive\-config\fP attualmente offre i seguenti componenti in /lib/live/config.
 
 .IP \fBdebconf\fP 4
-permette di applicare file di preconfigurazione arbitrai situati sul
-supporto live o su un server http/ftp.
+allows one to apply arbitrary preseed files placed on the live media or an
+http/ftp server.
 .IP \fBhostname\fP 4
 configura i file /etc/hostname e /etc/hosts.
 .IP \fBuser\-setup\fP 4
@@ -379,8 +373,8 @@ configura xfce4\-panel con le impostazioni predefinite.
 .IP \fBxscreensaver\fP 4
 disabilita lo screensaver che blocca lo schermo.
 .IP \fBhooks\fP 4
-permette di eseguire comandi arbitrari da un file situato sul supporto live
-o su un server http/ftp.
+allows one to run arbitrary commands from a file placed on the live media or
+an http/ftp server.
 
 .SH FILE
 .IP \fB/etc/live/config.conf\fP 4
