--- a/manpages/po/it/live-config.7.po
+++ b/manpages/po/it/live-config.7.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: live-config\n"
-"POT-Creation-Date: 2015-09-23 16:59+0200\n"
+"POT-Creation-Date: 2018-02-24 11:53+0100\n"
 "PO-Revision-Date: 2013-09-29 18:59+0200\n"
 "Last-Translator: skizzhg <skizzhg@gmx.com>\n"
 "Language-Team: none\n"
@@ -200,10 +200,15 @@ msgstr "B<live-config.debconf-preseed>=filesystem|medium|I<URL1>|I<URL2>| ... |I
 
 #. type: Plain text
 #: en/live-config.7:39
+#, fuzzy
+#| msgid ""
+#| "Allows to fetch and apply one or more debconf preseed files to be applied "
+#| "to the debconf database. Note that the URLs must be fetchable by wget "
+#| "(http, ftp or file://)."
 msgid ""
-"Allows to fetch and apply one or more debconf preseed files to be applied to "
-"the debconf database. Note that the URLs must be fetchable by wget (http, "
-"ftp or file://)."
+"Allows one to fetch and apply one or more debconf preseed files to be "
+"applied to the debconf database. Note that the URLs must be fetchable by "
+"wget (http, ftp or file://)."
 msgstr ""
 "Permette di prelevare e applicare uno o più file debconf di "
 "preconfigurazione da applicare al database debconf. Si noti che gli URL "
@@ -257,7 +262,9 @@ msgstr "B<live-config.hostname>=I<HOSTNAME> | B<hostname>=I<HOSTNAME>"
 
 #. type: Plain text
 #: en/live-config.7:49
-msgid "Allows to set the hostname of the system. The default is 'debian'."
+#, fuzzy
+#| msgid "Allows to set the hostname of the system. The default is 'debian'."
+msgid "Allows one to set the hostname of the system. The default is 'debian'."
 msgstr ""
 "Permette di impostare l'hostname del sistema, il predefinito è \"debian\"."
 
@@ -269,9 +276,13 @@ msgstr "B<live-config.username>=I<NOMEUTENTE> | B<username>=I<NOMEUTENTE>"
 
 #. type: Plain text
 #: en/live-config.7:51
+#, fuzzy
+#| msgid ""
+#| "Allows to set the username that gets created for autologin. The default "
+#| "is 'user'."
 msgid ""
-"Allows to set the username that gets created for autologin. The default is "
-"'user'."
+"Allows one to set the username that gets created for autologin. The default "
+"is 'user'."
 msgstr ""
 "Permette di impostare il nome utente che viene creato per il login "
 "automatico, il predefinito è \"user\"."
@@ -284,8 +295,13 @@ msgstr "B<live-config.user-default-groups>=I<GRUPPO>,I<GRUPPO2> ... I<GRUPPOn> |
 
 #. type: Plain text
 #: en/live-config.7:53
+#, fuzzy
+#| msgid ""
+#| "Allows to set the default groups of the users that gets created for "
+#| "autologin is member of. The default is 'audio cdrom dip floppy video "
+#| "plugdev netdev powerdev scanner bluetooth'."
 msgid ""
-"Allows to set the default groups of the users that gets created for "
+"Allows one to set the default groups of the users that gets created for "
 "autologin is member of. The default is 'audio cdrom dip floppy video plugdev "
 "netdev powerdev scanner bluetooth'."
 msgstr ""
@@ -301,9 +317,13 @@ msgstr "B<live-config.user-fullname>=\"I<NOME COMPLETO UTENTE>\" | B<user-fullna
 
 #. type: Plain text
 #: en/live-config.7:55
+#, fuzzy
+#| msgid ""
+#| "Allows to set the fullname of the users that gets created for autologin. "
+#| "On Debian the default is 'Debian Live user'."
 msgid ""
-"Allows to set the fullname of the users that gets created for autologin. On "
-"Debian the default is 'Debian Live user'."
+"Allows one to set the fullname of the users that gets created for autologin. "
+"On Debian the default is 'Debian Live user'."
 msgstr ""
 "Permette di impostare il nome utente completo che viene creato per il login "
 "automatico, il predefinito di Debian è \"Debian Live user\"."
@@ -316,10 +336,15 @@ msgstr "B<live-config.locales>=I<LOCALIZZAZIONE1>,I<LOCALIZZAZIONE2> ... I<LOCAL
 
 #. type: Plain text
 #: en/live-config.7:57
+#, fuzzy
+#| msgid ""
+#| "Allows to set the locale of the system, e.g. 'de_CH.UTF-8'. The default "
+#| "is 'en_US.UTF-8'. In case the selected locale is not already available on "
+#| "the system, it is automatically generated on the fly."
 msgid ""
-"Allows to set the locale of the system, e.g. 'de_CH.UTF-8'. The default is "
-"'en_US.UTF-8'. In case the selected locale is not already available on the "
-"system, it is automatically generated on the fly."
+"Allows one to set the locale of the system, e.g. 'de_CH.UTF-8'. The default "
+"is 'en_US.UTF-8'. In case the selected locale is not already available on "
+"the system, it is automatically generated on the fly."
 msgstr ""
 "Permette di impostare la localizzazione del sistema, ad esempio \"it_IT."
 "UTF-8\", il predefinito è \"en_US.UTF-8\". Se la localizzazione selezionata "
@@ -333,9 +358,13 @@ msgstr "B<live-config.timezone>=I<FUSO ORARIO> | B<timezone>=I<FUSO ORARIO>"
 
 #. type: Plain text
 #: en/live-config.7:59
+#, fuzzy
+#| msgid ""
+#| "Allows to set the timezone of the system, e.g. 'Europe/Zurich'. The "
+#| "default is 'UTC'."
 msgid ""
-"Allows to set the timezone of the system, e.g. 'Europe/Zurich'. The default "
-"is 'UTC'."
+"Allows one to set the timezone of the system, e.g. 'Europe/Zurich'. The "
+"default is 'UTC'."
 msgstr ""
 "Permette di impostare il fuso orario del sistema, ad esempio \"Europe/Rome"
 "\"; il predefinito è \"UTC\"."
@@ -348,7 +377,9 @@ msgstr "B<live-config.keyboard-model>=I<MODELLO_TASTIERA> | B<keyboard-model>=I<
 
 #. type: Plain text
 #: en/live-config.7:61
-msgid "Allows to change the keyboard model. There is no default value set."
+#, fuzzy
+#| msgid "Allows to change the keyboard model. There is no default value set."
+msgid "Allows one to change the keyboard model. There is no default value set."
 msgstr ""
 "Permette di scegliere il modello della tastiera, non è impostato alcun "
 "valore predefinito."
@@ -361,10 +392,15 @@ msgstr "B<live-config.keyboard-layouts>=I<LAYOUT_TASTIERA1>,I<LAYOUT_TASTIERA2> 
 
 #. type: Plain text
 #: en/live-config.7:63
+#, fuzzy
+#| msgid ""
+#| "Allows to change the keyboard layouts. If more than one is specified, the "
+#| "tools of the desktop environment will allow to switch it under X11. There "
+#| "is no default value set."
 msgid ""
-"Allows to change the keyboard layouts. If more than one is specified, the "
-"tools of the desktop environment will allow to switch it under X11. There is "
-"no default value set."
+"Allows one to change the keyboard layouts. If more than one is specified, "
+"the tools of the desktop environment will allow one to switch it under X11. "
+"There is no default value set."
 msgstr ""
 "Permette di modificare i layout della tastiera. Se ne viene specificato più "
 "di uno gli strumenti dell'ambiente desktop consentiranno di cambiarlo in "
@@ -378,12 +414,21 @@ msgstr "B<live-config.keyboard-variants>=I<SCHEMA_TASTIERA1>,I<SCHEMA_TASTIERA2>
 
 #. type: Plain text
 #: en/live-config.7:65
+#, fuzzy
+#| msgid ""
+#| "Allows to change the keyboard variants. If more than one is specified, "
+#| "the same number of values as keyboard-layouts values should be specified "
+#| "as they will be matched one-to-one in the order specified. Blank values "
+#| "are allowed. The tools of the desktop environment will allow to switch "
+#| "between each layout and variant pair under X11. There is no default value "
+#| "set."
 msgid ""
-"Allows to change the keyboard variants. If more than one is specified, the "
-"same number of values as keyboard-layouts values should be specified as they "
-"will be matched one-to-one in the order specified. Blank values are allowed. "
-"The tools of the desktop environment will allow to switch between each "
-"layout and variant pair under X11. There is no default value set."
+"Allows one to change the keyboard variants. If more than one is specified, "
+"the same number of values as keyboard-layouts values should be specified as "
+"they will be matched one-to-one in the order specified. Blank values are "
+"allowed. The tools of the desktop environment will allow one to switch "
+"between each layout and variant pair under X11. There is no default value "
+"set."
 msgstr ""
 "Permette di modificare gli schemi della tastiera (es. qwerty, qWERTZ, "
 "AZERTY, ecc.). Se ne viene specificato più di uno è necessario indicare lo "
@@ -400,7 +445,11 @@ msgstr "B<live-config.keyboard-options>=I<OPZIONI_TASTIERA> | B<keyboard-options
 
 #. type: Plain text
 #: en/live-config.7:67
-msgid "Allows to change the keyboard options. There is no default value set."
+#, fuzzy
+#| msgid ""
+#| "Allows to change the keyboard options. There is no default value set."
+msgid ""
+"Allows one to change the keyboard options. There is no default value set."
 msgstr ""
 "Permette di modificare le opzioni della tastiera, non è impostato alcun "
 "valore predefinito."
@@ -413,7 +462,9 @@ msgstr "B<live-config.sysv-rc>=I<SERVIZIO1>,I<SERVIZIO2> ... I<SERVIZIOn> | B<sy
 
 #. type: Plain text
 #: en/live-config.7:69
-msgid "Allows to disable sysv services through update-rc.d."
+#, fuzzy
+#| msgid "Allows to disable sysv services through update-rc.d."
+msgid "Allows one to disable sysv services through update-rc.d."
 msgstr "Permette di disabilitare i servizi di sysv tramite update-rc.d."
 
 #. type: IP
@@ -424,9 +475,13 @@ msgstr "B<live-config.utc>=B<yes>|no | B<utc>=B<yes>|no"
 
 #. type: Plain text
 #: en/live-config.7:71
+#, fuzzy
+#| msgid ""
+#| "Allows to change if the system is assuming that the hardware clock is set "
+#| "to UTC or not. The default is 'yes'."
 msgid ""
-"Allows to change if the system is assuming that the hardware clock is set to "
-"UTC or not. The default is 'yes'."
+"Allows one to change if the system is assuming that the hardware clock is "
+"set to UTC or not. The default is 'yes'."
 msgstr ""
 "Permette di scegliere se il sistema debba supporre che l'orologio hardware "
 "sia impostato o meno su UTC, il valore predefinito è \"yes\"."
@@ -439,7 +494,9 @@ msgstr "B<live-config.x-session-manager=>I<X_SESSION_MANAGER> | B<x-session-mana
 
 #. type: Plain text
 #: en/live-config.7:73
-msgid "Allows to set the x-session-manager through update-alternatives."
+#, fuzzy
+#| msgid "Allows to set the x-session-manager through update-alternatives."
+msgid "Allows one to set the x-session-manager through update-alternatives."
 msgstr "Permette di impostare x-session-manager tramite update-alternatives."
 
 #. type: IP
@@ -450,8 +507,14 @@ msgstr "B<live-config.xorg-driver>=I<DRIVER_XORG> | B<xorg-driver>=I<DRIVER_XORG
 
 #. type: Plain text
 #: en/live-config.7:75
+#, fuzzy
+#| msgid ""
+#| "Allows to set xorg driver instead of autodetecting it. If a PCI ID is "
+#| "specified in /usr/share/live/config/xserver-xorg/I<DRIVER>.ids within the "
+#| "live system, the I<DRIVER> is enforced for these devices. If both a boot "
+#| "parameter and an override are found, the boot parameter takes precedence."
 msgid ""
-"Allows to set xorg driver instead of autodetecting it. If a PCI ID is "
+"Allows one to set xorg driver instead of autodetecting it. If a PCI ID is "
 "specified in /usr/share/live/config/xserver-xorg/I<DRIVER>.ids within the "
 "live system, the I<DRIVER> is enforced for these devices. If both a boot "
 "parameter and an override are found, the boot parameter takes precedence."
@@ -470,8 +533,11 @@ msgstr "B<live-config.xorg-resolution>=I<RISOLUZIONE_XORG> | B<xorg-resolution>=
 
 #. type: Plain text
 #: en/live-config.7:77
+#, fuzzy
+#| msgid ""
+#| "Allows to set xorg resolution instead of autodetecting it, e.g. 1024x768."
 msgid ""
-"Allows to set xorg resolution instead of autodetecting it, e.g. 1024x768."
+"Allows one to set xorg resolution instead of autodetecting it, e.g. 1024x768."
 msgstr ""
 "Permette di impostare la risoluzione per xorg invece di riconoscerla "
 "automaticamente, ad esempio 1024x768."
@@ -484,8 +550,14 @@ msgstr "B<live-config.wlan-driver>=I<DRIVER_WLAN> | B<wlan-driver>=I<DRIVER_WLAN
 
 #. type: Plain text
 #: en/live-config.7:79
+#, fuzzy
+#| msgid ""
+#| "Allows to set WLAN driver instead of autodetecting it. If a PCI ID is "
+#| "specified in /usr/share/live/config/broadcom-sta/I<DRIVER>.ids within the "
+#| "live system, the I<DRIVER> is enforced for these devices. If both a boot "
+#| "parameter and an override are found, the boot parameter takes precedence."
 msgid ""
-"Allows to set WLAN driver instead of autodetecting it. If a PCI ID is "
+"Allows one to set WLAN driver instead of autodetecting it. If a PCI ID is "
 "specified in /usr/share/live/config/broadcom-sta/I<DRIVER>.ids within the "
 "live system, the I<DRIVER> is enforced for these devices. If both a boot "
 "parameter and an override are found, the boot parameter takes precedence."
@@ -504,14 +576,23 @@ msgstr "B<live-config.hooks>=filesystem|medium|I<URL1>|I<URL2>| ... |I<URLn> | B
 
 #. type: Plain text
 #: en/live-config.7:81
+#, fuzzy
+#| msgid ""
+#| "Allows to fetch and execute one or more arbitrary files. Note that the "
+#| "URLs must be fetchable by wget (http, ftp or file://), the files are "
+#| "executed in /tmp of the running live system, and that the files needs "
+#| "their dependencies, if any, already installed, e.g. if a python script "
+#| "should be executed the system needs python installed. Some hooks for some "
+#| "common use-cases are available at /usr/share/doc/live-config/examples/"
+#| "hooks/ and E<lt>I<http://live-systems.org/other/hooks>E<gt>."
 msgid ""
-"Allows to fetch and execute one or more arbitrary files. Note that the URLs "
-"must be fetchable by wget (http, ftp or file://), the files are executed in /"
-"tmp of the running live system, and that the files needs their dependencies, "
-"if any, already installed, e.g. if a python script should be executed the "
-"system needs python installed. Some hooks for some common use-cases are "
-"available at /usr/share/doc/live-config/examples/hooks/ and E<lt>I<http://"
-"live-systems.org/other/hooks>E<gt>."
+"Allows one to fetch and execute one or more arbitrary files. Note that the "
+"URLs must be fetchable by wget (http, ftp or file://), the files are "
+"executed in /tmp of the running live system, and that the files needs their "
+"dependencies, if any, already installed, e.g. if a python script should be "
+"executed the system needs python installed. Some hooks for some common use-"
+"cases are available at /usr/share/doc/live-config/examples/hooks/ and "
+"E<lt>I<http://live-systems.org/other/hooks>E<gt>."
 msgstr ""
 "Permette di prelevare ed eseguire uno o più file arbitrari. Si noti che gli "
 "URL devono essere scaricabili da wget (http, ftp o file://), i file vengono "
@@ -631,7 +712,9 @@ msgstr "Parametri di avvio (opzioni speciali)"
 
 #. type: Plain text
 #: en/live-config.7:104
-msgid "For special use cases there are some special boot paramters."
+#, fuzzy
+#| msgid "For special use cases there are some special boot paramters."
+msgid "For special use cases there are some special boot parameters."
 msgstr "Per casi particolari ci sono alcuni parametri speciali."
 
 #. type: IP
@@ -698,12 +781,19 @@ msgstr ""
 
 #. type: Plain text
 #: en/live-config.7:116
+#, fuzzy
+#| msgid ""
+#| "Although the configuration files placed in the configuration directories "
+#| "do not require a particular name or suffix, it is suggested for "
+#| "consistency reasons to either use 'vendor.conf' or 'project.conf' as a "
+#| "naming scheme (whereas 'vendor' or 'project' is replaced with the actual "
+#| "name, resulting in a filename like 'progress-linux.conf')."
 msgid ""
 "Although the configuration files placed in the configuration directories do "
-"not require a particular name or suffix, it is suggested for consistency "
-"reasons to either use 'vendor.conf' or 'project.conf' as a naming scheme "
-"(whereas 'vendor' or 'project' is replaced with the actual name, resulting "
-"in a filename like 'progress-linux.conf')."
+"not require a particular name, it is suggested for consistency reasons to "
+"either use 'vendor.conf' or 'project.conf' as a naming scheme (whereas "
+"'vendor' or 'project' is replaced with the actual name, resulting in a "
+"filename like 'progress-linux.conf')."
 msgstr ""
 "Sebbene i file di configurazione messi nelle directory di configurazione non "
 "richiedano un nome o un suffisso particolari, per coerenza è suggerito di "
@@ -1093,12 +1183,21 @@ msgstr "Rimuovere componenti config esistenti"
 
 #. type: Plain text
 #: en/live-config.7:174
+#, fuzzy
+#| msgid ""
+#| "It is not really possible to remove components itself in a sane way yet "
+#| "without requiring either to ship a locally modified B<live-config> "
+#| "package or using dpkg-divert. However, the same can be achieved by "
+#| "disabling the respective components through the live-config.nocomponents "
+#| "mechanism, see above. To avoid to always need specifing disabled "
+#| "components through the boot parameter, a configuration file should be "
+#| "used, see above."
 msgid ""
 "It is not really possible to remove components itself in a sane way yet "
 "without requiring either to ship a locally modified B<live-config> package "
 "or using dpkg-divert. However, the same can be achieved by disabling the "
 "respective components through the live-config.nocomponents mechanism, see "
-"above. To avoid to always need specifing disabled components through the "
+"above. To avoid to always need specifying disabled components through the "
 "boot parameter, a configuration file should be used, see above."
 msgstr ""
 "Non è ancora realmente possibile rimuovere i componenti in un modo sensato "
@@ -1142,9 +1241,13 @@ msgstr "B<debconf>"
 
 #. type: Plain text
 #: en/live-config.7:182
+#, fuzzy
+#| msgid ""
+#| "allows to apply arbitrary preseed files placed on the live media or an "
+#| "http/ftp server."
 msgid ""
-"allows to apply arbitrary preseed files placed on the live media or an http/"
-"ftp server."
+"allows one to apply arbitrary preseed files placed on the live media or an "
+"http/ftp server."
 msgstr ""
 "permette di applicare file di preconfigurazione arbitrai situati sul "
 "supporto live o su un server http/ftp."
@@ -1516,9 +1619,13 @@ msgstr "B<hooks>"
 
 #. type: Plain text
 #: en/live-config.7:252
+#, fuzzy
+#| msgid ""
+#| "allows to run arbitrary commands from a file placed on the live media or "
+#| "an http/ftp server."
 msgid ""
-"allows to run arbitrary commands from a file placed on the live media or an "
-"http/ftp server."
+"allows one to run arbitrary commands from a file placed on the live media or "
+"an http/ftp server."
 msgstr ""
 "permette di eseguire comandi arbitrari da un file situato sul supporto live "
 "o su un server http/ftp."
